--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "concat": "^1.0.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
+    "jquery": "^3.3.1",
     "observable": "^2.1.4",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
